# mmm-framework

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: 00_PROJECT_RULES.md  01_ARCHITECTURE.md  02_NAMING_CONVENTION.md  03_DATASET_CONTRACT.md  05_FEATURE_ENGINEERING_CORE.md  06_EDA.md  XX_DATASET_MAPPING.md
src/data/: exceptions.p
src/mmm/: __init__.py
src/mmm/config/: schema.py
src/mmm/data/: __init__.py  column_mapper.py  dataset.py  exceptions.py  validation.py
src/mmm/eda/: __init__.py  _selector.py  correlation.py  ridge.py  runner.py  vif.py
src/mmm/features/: base.py  events.py  pipeline.py  report.py  seasonality.py  trend.py
tests/: test_dataset_validation.py  test_eda.py  test_important.py  test_naming.py
tests/data/: test_column_mapper.py
tests/features/: test_events.py  test_pipeline.py  test_seasonality.py  test_trend.py
